[gd_scene load_steps=21 format=3 uid="uid://pi72u2eg4hto"]

[ext_resource type="ArrayMesh" uid="uid://cbrcdwu373312" path="res://assets/models/houses/House2.obj" id="1_igogy"]
[ext_resource type="Texture2D" uid="uid://c8brc08eiq61r" path="res://assets/models/houses/House1.png" id="2_ado7s"]
[ext_resource type="ArrayMesh" uid="uid://dudyhgieqpyiq" path="res://assets/models/houses/Door.obj" id="3_rcyda"]
[ext_resource type="Texture2D" uid="uid://cjlchrh0xuk14" path="res://assets/models/houses/Door.png" id="4_w663t"]
[ext_resource type="Script" path="res://interactable/Monk.gd" id="5_kwgql"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ph3ep"]
albedo_texture = ExtResource("2_ado7s")
metallic_specular = 0.15

[sub_resource type="BoxShape3D" id="BoxShape3D_gh68i"]
size = Vector3(0.7, 4.4, 8.4)

[sub_resource type="BoxShape3D" id="BoxShape3D_biv2o"]
size = Vector3(7.2, 4.4, 0.6)

[sub_resource type="BoxShape3D" id="BoxShape3D_4d3g2"]
size = Vector3(2.6, 4.4, 0.6)

[sub_resource type="BoxShape3D" id="BoxShape3D_owevi"]
size = Vector3(2.6, 1.6, 0.6)

[sub_resource type="BoxShape3D" id="BoxShape3D_isamp"]
size = Vector3(9.6, 0.7, 9.6)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_mwit2"]
resource_name = "palette"
albedo_texture = ExtResource("4_w663t")
metallic_specular = 0.15

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_dklxh"]
albedo_color = Color(0, 0, 0, 1)
metallic_specular = 0.15

[sub_resource type="BoxMesh" id="BoxMesh_u651q"]
material = SubResource("StandardMaterial3D_dklxh")
size = Vector3(7.2, 0.01, 7.4)

[sub_resource type="BoxShape3D" id="BoxShape3D_p5kal"]
size = Vector3(7.2, 0.01, 7.4)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_8ujau"]
shading_mode = 0
albedo_color = Color(0.372549, 1, 1, 1)

[sub_resource type="BoxMesh" id="BoxMesh_1awd8"]
material = SubResource("StandardMaterial3D_8ujau")
size = Vector3(0.5, 0.5, 0.5)

[sub_resource type="BoxShape3D" id="BoxShape3D_k140y"]
size = Vector3(0.5, 0.5, 0.5)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_rm5y7"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_vgffe"]

[node name="MonkHouse" type="Node3D"]

[node name="House" type="StaticBody3D" parent="."]

[node name="Mesh" type="MeshInstance3D" parent="House"]
transform = Transform3D(6, 0, 0, 0, 6, 0, 0, 0, 6, 0, 0, 0)
mesh = ExtResource("1_igogy")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_ph3ep")

[node name="CollisionShape3D" type="CollisionShape3D" parent="House"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.9, 2.2, 5.96046e-08)
shape = SubResource("BoxShape3D_gh68i")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="House"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.8, 2.2, 5.96046e-08)
shape = SubResource("BoxShape3D_gh68i")

[node name="CollisionShape3D3" type="CollisionShape3D" parent="House"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0999996, 2.2, -3.9)
shape = SubResource("BoxShape3D_biv2o")

[node name="CollisionShape3D4" type="CollisionShape3D" parent="House"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.5, 2.2, 3.9)
shape = SubResource("BoxShape3D_4d3g2")

[node name="CollisionShape3D5" type="CollisionShape3D" parent="House"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.5, 2.2, 3.9)
shape = SubResource("BoxShape3D_4d3g2")

[node name="CollisionShape3D6" type="CollisionShape3D" parent="House"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0999999, 3.8, 3.9)
shape = SubResource("BoxShape3D_owevi")

[node name="CollisionShape3D7" type="CollisionShape3D" parent="House"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9.68575e-08, 4.5, 4.17233e-07)
shape = SubResource("BoxShape3D_isamp")

[node name="Door" type="MeshInstance3D" parent="."]
transform = Transform3D(3, 0, 0, 0, 3, 0, 0, 0, 3, 0, 0, 3.99202)
mesh = ExtResource("3_rcyda")
surface_material_override/0 = SubResource("StandardMaterial3D_mwit2")

[node name="Floor" type="StaticBody3D" parent="."]

[node name="Mesh" type="MeshInstance3D" parent="Floor"]
mesh = SubResource("BoxMesh_u651q")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Floor"]
shape = SubResource("BoxShape3D_p5kal")

[node name="Orb" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.8, 0.3, 3)

[node name="Mesh" type="MeshInstance3D" parent="Orb"]
mesh = SubResource("BoxMesh_1awd8")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Orb"]
shape = SubResource("BoxShape3D_k140y")

[node name="OmniLight3D" type="OmniLight3D" parent="Orb"]
light_energy = 1.8

[node name="Orb2" type="StaticBody3D" parent="."]
transform = Transform3D(0.866025, 0, 0.5, 0, 1, 0, -0.5, 0, 0.866025, 1.6, 0.3, -2.8)

[node name="Mesh" type="MeshInstance3D" parent="Orb2"]
mesh = SubResource("BoxMesh_1awd8")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Orb2"]
shape = SubResource("BoxShape3D_k140y")

[node name="OmniLight3D" type="OmniLight3D" parent="Orb2"]
light_energy = 1.8

[node name="Orb3" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.8, 0.3, 0.5)

[node name="Mesh" type="MeshInstance3D" parent="Orb3"]
mesh = SubResource("BoxMesh_1awd8")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Orb3"]
shape = SubResource("BoxShape3D_k140y")

[node name="OmniLight3D" type="OmniLight3D" parent="Orb3"]
light_energy = 1.8

[node name="Orb4" type="StaticBody3D" parent="."]
transform = Transform3D(0.965926, 0, 0.258819, 0, 1, 0, -0.258819, 0, 0.965926, -2.8, 0.3, -0.2)

[node name="Mesh" type="MeshInstance3D" parent="Orb4"]
mesh = SubResource("BoxMesh_1awd8")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Orb4"]
shape = SubResource("BoxShape3D_k140y")

[node name="OmniLight3D" type="OmniLight3D" parent="Orb4"]
light_energy = 1.8

[node name="Orb5" type="StaticBody3D" parent="."]
transform = Transform3D(0.866025, 0, 0.5, 0, 1, 0, -0.5, 0, 0.866025, -2.8, 0.8, 0.2)

[node name="Mesh" type="MeshInstance3D" parent="Orb5"]
mesh = SubResource("BoxMesh_1awd8")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Orb5"]
shape = SubResource("BoxShape3D_k140y")

[node name="OmniLight3D" type="OmniLight3D" parent="Orb5"]
light_energy = 1.8

[node name="Monk" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.3, 1, -2.6)
collision_layer = 3
collision_mask = 3
script = ExtResource("5_kwgql")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Monk"]
mesh = SubResource("CapsuleMesh_rm5y7")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Monk"]
shape = SubResource("CapsuleShape3D_vgffe")

[node name="MonkShenanigans" type="CanvasLayer" parent="Monk"]
layer = 4

[node name="Control" type="Control" parent="Monk/MonkShenanigans"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Bg" type="Panel" parent="Monk/MonkShenanigans/Control"]
custom_minimum_size = Vector2(900, 450)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Monk/MonkShenanigans/Control/Bg"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="HBoxContainer" type="HBoxContainer" parent="Monk/MonkShenanigans/Control/Bg/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Button" type="Button" parent="Monk/MonkShenanigans/Control/Bg/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Press me"

[node name="Button2" type="Button" parent="Monk/MonkShenanigans/Control/Bg/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Press me"

[node name="DelayTimer" type="Timer" parent="Monk"]
wait_time = 0.05
one_shot = true

[connection signal="pressed" from="Monk/MonkShenanigans/Control/Bg/MarginContainer/HBoxContainer/Button" to="Monk" method="_on_button_pressed"]
[connection signal="pressed" from="Monk/MonkShenanigans/Control/Bg/MarginContainer/HBoxContainer/Button2" to="Monk" method="_on_button_2_pressed"]
[connection signal="timeout" from="Monk/DelayTimer" to="Monk" method="_on_delay_timer_timeout"]
